[project]
name = "tcubed"
version = "1.0.0"
description = "This is TicTacToe in the terminal! But different..."
authors = [
    {name = "thesignumt", email = "tcrrxzz@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyfiglet"
]

[project.scripts]
ttt = "ttt.cli:main"
tcubed = "ttt.cli:main"

[project.urls]
Repository = "https://github.com/thesignumt/tcubed"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"
